# cics

./: .gitignore  LICENSE  README.md  clone_repos.sh  pyproject.toml  run_all.py  sample_repos.txt
.github/workflows/: publish.yml
cics/: __init__.py  explainer.py  extractor.py  rules.py  run.py
dataset/: build_plans.py  scenarios.py  select_examples.py
eval/: evaluate.py
examples/: cics-pr-review-bitbucket.yml  cics-pr-review.yml  clone_repos.sh  gen_base_plans.sh
