[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cics"
version = "1.0.0"
description = "Cost-Impact Change Signals: plan-aware detection of cost-impacting Terraform changes"
authors = [{name = "Usman Sadiq", email = "usmansadiq786@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["anthropic>=0.30.0"]

[project.scripts]
cics = "cics.run:main"
