[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cics-terraform"
version = "1.0.4"
description = "Cost-Impact Change Signals: plan-aware detection of cost-impacting Terraform changes"
readme = "README.md"
license = "MIT"
authors = [{name = "Usman Sadiq", email = "usmansadiq786@gmail.com"}]
requires-python = ">=3.10"
dependencies = ["anthropic>=0.30.0"]
keywords = ["terraform", "finops", "iac", "cost", "devops", "cloud"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]

[tool.setuptools.packages.find]
include = ["cics*"]

[project.urls]
Homepage = "https://github.com/usmansadiq786/cics"
Repository = "https://github.com/usmansadiq786/cics"
"Bug Tracker" = "https://github.com/usmansadiq786/cics/issues"

[project.scripts]
cics = "cics.run:main"
